feat(client): introduce a color palette

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -11,7 +11,7 @@
     <title>Parcelec</title>
   </head>
 
-  <body data-sveltekit-preload-data="hover">
+  <body data-sveltekit-preload-data="hover" class="bg-neutral">
     <div>%sveltekit.body%</div>
   </body>
 </html>
