feat(client): add `daisyui`

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="retro">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -11,7 +11,7 @@
     <title>Parcelec</title>
   </head>
 
-  <body data-sveltekit-preload-data="hover" class="bg-neutral">
+  <body data-sveltekit-preload-data="hover">
     <div>%sveltekit.body%</div>
   </body>
 </html>
